<resources>
    <!-- General -->
    <string name="app_name">Tap Water</string>
    <string name="app_name_debug">Tap Water-Debug</string>
    <string name="title_summary">Summary</string>
    <string name="title_record">Record</string>
    <string name="title_settings">Settings</string>
    <string name="title_notification_settings">Notification Settings</string>
    <string name="title_record_settings">Record Settings</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_month_summary">Month Summary</string>
    <string name="drink_button">Drink</string>
    <string name="liter_format">%.2fL</string>
    <string name="liter_format_short">%.1fL</string>
    <string name="percentage_format">%.1f%%</string>
    <string name="month_format">%s %s</string>
    <string name="month_format_two_lines">%s\n%s</string>
    <string name="time_format">%d %s</string>
    <string name="time_format_short">%d</string>

    <!-- Start Goal Set Fragment -->
    <string name="goal_set_help_text">Please set the amount you want to drink a day.</string>
    <string name="goal_set_complete">Goal Set</string>

    <!-- Record Fragment -->
    <string name="percentage">%s%%</string>
    <string name="drank_today">Current: %sL</string>
    <string name="daily_goal">Goal: %sL</string>

    <!-- Record Detail Fragment -->
    <string name="record_detail_title">Detail</string>
    <string name="record_remove_last">Remove Record</string>
    <string name="record_detail_drank_today">Drank</string>
    <string name="record_detail_goal">Goal</string>
    <string name="record_detail_average">Average per Hour</string>
    <string name="record_detail_most_drank_time">Peak Time</string>
    <string name="record_detail_drank_at_time">Drank</string>
    <string name="record_detail_now">Now</string>
    <string name="record_detail_time_title">Time</string>
    <string name="record_detail_drank_title">Drank</string>
    <string name="detail_chart_no_data_text">No Data</string>
    <string name="detail_dialog_remove_record_title">Remove Record</string>
    <string name="detail_dialog_remove_record_content">This will remove the latest record on today\'s log.</string>
    <string name="detail_dialog_cancel_button">Cancel</string>
    <string name="detail_dialog_remove_button">Remove</string>
    <string name="detail_remove_toast">Record is removed.</string>

    <!-- Completed Fragment -->
    <string name="complete_title">Goal Achieved!</string>
    <string name="trophy_description">Trophy</string>
    <string name="complete_confirm">Confirm</string>
    <string name="complete_show_calendar">Show Calendar</string>

    <!-- Settings Fragment -->
    <string name="category_notification">Notification</string>
    <string name="category_record">Record</string>
    <string name="category_about">About</string>
    <string name="info_title">App Info</string>
    <string name="open_source_title">Open Source Licenses</string>
    <string name="notification_title">Notification</string>
    <string name="record_title">Record</string>
    <string name="remove_record_title">Clear Records</string>
    <string name="dialog_remove_record_title">Clear Records</string>
    <string name="dialog_remove_record_content">This will remove all the records up until now.</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="dialog_remove_button">Clear</string>
    <string name="clear_toast">All Records are removed</string>

    <!-- Notification Preferences -->
    <string name="reminder_title">Reminder</string>
    <plurals name="hour_format">
        <item quantity="zero">%d hour</item>
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <string name="interval_title">Interval</string>

    <!-- Record Preferences -->
    <string name="daily_goal_title">Daily Goal</string>
    <string name="speed_title">Drinking Speed</string>

    <!-- Speed Measure Fragment -->
    <string name="speed_measure_title">Speed Measure</string>
    <string name="input_hint">Volume to Drink(ml)</string>
    <string name="next_button">Next</string>
    <string name="measure_tip_text">Tap Water uses drinking speed of the user and time interval to record your water intake. Please enter the volume of cup you want to drink, and then measure speed by drinking water three cups of water. This should be done only once on install.</string>
    <string name="cup_tip_text">Drink water as you touch the cup. Tap Water will start measuring time at the same time you touch it. Hit Done as you finish drinking. Tap Water will calculate speed using cup volume and time interval.</string>
    <string name="volume_tip_text">Enter volume of cup you will drink three times. Measurement will be accurate and easy if you enter the appropriate amount; about one cup of paper cup.</string>
    <string name="set_volume">Set Volume</string>
    <string name="drink_complete">Done</string>
    <string name="measure_again">Measure Again</string>
    <string name="measure_complete">Measuring Complete</string>
    <string name="cup_button1">Cup Button1</string>
    <string name="cup_button2">Cup Button2</string>
    <string name="cup_button3">Cup Button3</string>
    <string name="info_button">Info Button</string>
    <string name="speed_format">%.0fml/sec</string>
    <string name="measure_background_text">Drink Water!</string>

    <!-- Speed Measure Help Fragment -->
    <string name="help_title">Volume</string>
    <string name="manual_input">Manual Input</string>
    <string name="cup_selector_title">Choose by Cup Type</string>
    <string name="soju_glass_title">Shot Glass</string>
    <string name="soju_glass_volume">50ml</string>
    <string name="paper_bag_cup_title">Paper Bag Cup</string>
    <string name="paper_bag_cup_volume">45ml</string>
    <string name="paper_cup_title">Paper Cup</string>
    <string name="paper_cup_volume">160ml</string>
    <string name="tall_tea_cup_title">Tall Tea Cup</string>
    <string name="tall_tea_cup_volume">190ml</string>
    <string name="beer_glass_title">Tall Water Glass</string>
    <string name="beer_glass_volume">220ml</string>

    <!-- App Info Fragment -->
    <string name="update_available">Update is available</string>
    <string name="app_icon">App Icon</string>
    <string name="up_to_date">App is up to date</string>
    <string name="current_version">Current Version: %s</string>
    <string name="latest_version">Latest Version: %s</string>

    <!-- Open Source Licenses Fragment -->

    <!-- Notification -->
    <string name="notification_title_text">Drink Water</string>
    <string name="notification_content_text">You haven\'t achieved the amount you set today yet!</string>
    <string name="notification_channel_description">Drink Water Reminder</string>

    <!-- Summary Fragment -->
    <string name="no_record">No Record</string>
    <string name="select_other">Please select the other date</string>
    <string name="selected_drank_format">Drank: %.2fL</string>
    <string name="selected_goal_format">Goal: %.2fL</string>
    <string name="year_format">%d</string>
    <string name="selected_date_format">%s %s\n%s</string>

    <!-- Stats Fragment -->
    <string name="stats_title">Stats</string>
    <string name="stats_total_summary_title">Total Records</string>
    <string name="stats_date_format">%s %s, %s</string>
    <string name="drank_total">Total Drank</string>
    <string name="achieved_days">Goal Met</string>
    <plurals name="day_format">
        <item quantity="zero">%d day</item>
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <string name="most_drank">Highest Record</string>
    <string name="most_drank_date">Highest Record Date</string>
    <string name="summary_chart_title">Summary Chart</string>
    <string name="summary_chart_no_data_text">No Records Available</string>
    <string name="month_summary_title">Month Summary</string>
    <string name="month_summary_goal">Total Goal</string>
    <string name="month_summary_drank">Total Drank</string>
    <string name="month_summary_achieved_days">Goal Met</string>
    <string name="month_summary_most_drank">Highest Record</string>
    <string name="month_summary_most_drank_date">Highest Record Date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>