<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.parkjongseok.tapwater.ui.settings.SpeedMeasureViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/volume_tip_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/volume_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/input_hint"
            android:ems="10"
            android:focusable="true"
            android:hint="@string/input_hint"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:text="@={viewModel.volume}"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/help_info_button"
            android:background="@color/transparent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="@{() -> viewModel.onHelpInfoButtonClicked()}"
            app:layout_constraintBottom_toBottomOf="@+id/volume_input"
            app:layout_constraintEnd_toEndOf="@+id/volume_input"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/volume_input"
            app:layout_constraintTop_toTopOf="@+id/volume_input" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/measure_complete_button"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/set_volume"
            android:textSize="16sp"
            android:onClick="@{() -> viewModel.onSetVolumeClicked()}"
            android:enabled="@{viewModel.volume != &quot;&quot;}"
            app:iconGravity="textEnd"
            app:icon="@drawable/ic_chevron_right_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
